# info-drip

./: .gitignore  AGENTS.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend-ci.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: database.py  llm.py  main.py
backend/scripts/: check.sh
backend/tests/: test_database.py  test_documents_api.py  test_health.py  test_highlights_api.py  test_llm_provider.py  test_questions_api.py  test_quiz_attempts_api.py  test_review_cards_api.py  test_study_records_api.py
docs/: architecture.md
docs/runbook/: agent-workflow.md  documentation-style.md  ticket-template.md
ios/InfoDrip/Config/: Debug.xcconfig  Local.xcconfig.example  Release.xcconfig
ios/InfoDrip/InfoDrip/: ContentView.swift  Info.plist  InfoDripApp.swift  LocalPDFStore.swift  PDFKitView.swift  QuickActionDetailSheets.swift  QuickActionPanel.swift  ReaderWorkspace.swift  SavedSentenceSheets.swift
ios/InfoDrip/InfoDrip.xcodeproj/: project.pbxproj
ios/InfoDrip/InfoDrip.xcodeproj/xcshareddata/xcschemes/: InfoDrip.xcscheme
